<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.atomos</groupId>
		<artifactId>atomos.tests</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<artifactId>service.impl.activator</artifactId>

	<name>service.impl.activator</name>

	<dependencies>
		<dependency>
			<groupId>org.atomos</groupId>
			<artifactId>atomos.framework</artifactId>
			<version>${atomos.version}</version>
		</dependency>
		<dependency>
			<groupId>org.atomos</groupId>
			<artifactId>service.contract</artifactId>
			<version>${atomos.version}</version>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.annotation</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<!-- compile everything with the default to ensure module-info is correctg -->
							<release>${java.version}</release>
						</configuration>
					</execution>
					<!-- compile the packages that must work with java 8 -->
					<!-- This causes Eclipse workspace to fail to build -->
					<execution>
						<id>java8-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
							<release>8</release>
						</configuration>
					</execution>
					<!-- -->
				</executions>
			</plugin>
			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
